# SPH_CUDA_BASIC

./: .gitignore  CMakeLists.txt  build_run.sh  configuration.config
executable/: SPH
header/: computehelper.cuh  cuda_helper.cuh  kernel.cuh  particle.cuh  scene.cuh  vector_helper.cuh  vtkhelper.cuh
impl/: CMakeLists.txt  main.cu  md.cu
scenes/: boundary.py  inputfilegenerator.py  sph_scene_setup.vtk  sphere.py
